--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8090
+
 ## Database Properties
 spring.datasource.url = jdbc:postgresql://localhost:5432/ai
 spring.datasource.username = postgres
@@ -9,3 +11,11 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
+
+feign.client.config.default.loggerLevel = full
+
+logging.level.root=WARN
+logging.level.com.commerz.dvadnyvtahu.ai.client.midjourney=TRACE
+logging.level.com.commerz.dvadnyvtahu.ai.client.filestore=TRACE
+
+app.mj.token=8ca70cf3-2ca2-4962-8fbe-fc750445aba8
