--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ logging.level.com.commerz.dvadnyvtahu.ai.client.midjourney=TRACE
 logging.level.com.commerz.dvadnyvtahu.ai.client.filestore=TRACE
 
 app.mj.token=8ca70cf3-2ca2-4962-8fbe-fc750445aba8
+
+openai.model=gpt-4
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.api.key=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
