--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.port=8090
 
 ## Database Properties
-spring.datasource.url = jdbc:postgresql://localhost:5432/ai
-spring.datasource.username = postgres
-spring.datasource.password = Qazwsxedc369
+#spring.datasource.url = jdbc:postgresql://localhost:5432/ai
+#spring.datasource.username = postgres
+#spring.datasource.password = Qazwsxedc369
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Hibernate properties
 spring.jpa.show-sql = false
