--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,7 @@ feign.client.config.default.loggerLevel = full
 logging.level.root=WARN
 logging.level.com.commerz.dvadnyvtahu.ai.client.midjourney=TRACE
 logging.level.com.commerz.dvadnyvtahu.ai.client.filestore=TRACE
-
-app.mj.token=8ca70cf3-2ca2-4962-8fbe-fc750445aba8
+logging.level.com.commerz.dvadnyvtahu.ai.client.chatgpt=TRACE
 
 openai.model=gpt-4
 openai.api.url=https://api.openai.com/v1/chat/completions
