--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,8 @@ logging.level.com.commerz.dvadnyvtahu.ai.client.chatgpt=TRACE
 
 openai.model=gpt-4
 openai.api.url=https://api.openai.com/v1/chat/completions
+
+app.mj.token=
+openai.api.key=
+
+prompt.chatgtp.template=give me 5 %s in CSV format without numbers
