Image Controller added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,12 @@ logging.level.com.commerz.dvadnyvtahu.ai.client.chatgpt=TRACE
 openai.model=gpt-4
 openai.api.url=https://api.openai.com/v1/chat/completions
 
+google.cloud.storage.upload.url=https://storage.googleapis.com/upload/storage/v1/b/
+google.cloud.storage.bucket.name=collabothon-dvadnyvtahu
+#  o?uploadType=media&name=
+
 app.mj.token=
 openai.api.key=
+google.cloud.storage.token=
 
 prompt.chatgtp.template=give me 5 %s in CSV format without numbers
