--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ logging.level.root=WARN
 logging.level.com.commerz.dvadnyvtahu.ai.client.midjourney=TRACE
 logging.level.com.commerz.dvadnyvtahu.ai.client.filestore=TRACE
 logging.level.com.commerz.dvadnyvtahu.ai.client.chatgpt=TRACE
+logging.level.com.commerz.dvadnyvtahu.ai.client.gcs=TRACE
 
 openai.model=gpt-4
 openai.api.url=https://api.openai.com/v1/chat/completions
