--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,26 +5,29 @@ server.port=8090
 #spring.datasource.username = postgres
 #spring.datasource.password = Qazwsxedc369
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Hibernate properties
-spring.jpa.show-sql = false
-#update
-spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-spring.jpa.properties.hibernate.format_sql=true
+## Hibernate properties
+#spring.jpa.show-sql = false
+##update
+#spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.open-in-view=false
 
 feign.client.config.default.loggerLevel = full
 
 logging.level.root=WARN
-logging.level.com.commerz.dvadnyvtahu.ai.client.midjourney=TRACE
-logging.level.com.commerz.dvadnyvtahu.ai.client.filestore=TRACE
-logging.level.com.commerz.dvadnyvtahu.ai.client.chatgpt=TRACE
-logging.level.com.commerz.dvadnyvtahu.ai.client.gcs=TRACE
+logging.level.com.commerz.dvadnyvtahu.ai=INFO
+logging.level.com.commerz.dvadnyvtahu.ai.client.midjourney=INFO
+logging.level.com.commerz.dvadnyvtahu.ai.client.filestore=INFO
+logging.level.com.commerz.dvadnyvtahu.ai.client.chatgpt=INFO
+logging.level.com.commerz.dvadnyvtahu.ai.client.gcs=INFO
 
 openai.model=gpt-4
 openai.api.url=https://api.openai.com/v1/chat/completions
@@ -38,3 +41,5 @@ openai.api.key=
 google.cloud.storage.token=
 
 prompt.chatgtp.template=give me 5 %s in CSV format without numbers
+
+output.file=C:\\temp\\%s.jpg
